Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ It can be used for hosting sites like jsfiddle and codepen.You can also host it 
 
 <ul>
 <li>
-<a href="https://astarpx.com/projects/codeplay">Codeplay</a> </li>
+<a href="https://astarpx.com/projects/codeplay">Codeplay</a> SAVE DISABLED IN DEMO</li>
 </ul>
 
 <h3>
