Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@ It can be used for hosting sites like jsfiddle and codepen.You can also host it 
 </ul>
 
 <h3>
-<a id="update-212" class="anchor" href="#update-212" aria-hidden="true"><span class="octicon octicon-link"></span></a>update 2.1.2</h3>
+<a id="update-300" class="anchor" href="#update-300" aria-hidden="true"><span class="octicon octicon-link"></span></a>update 3.0.0</h3>
 
 <ul>
 <li>Added source code download option for users</li>
+<li>Collaboration</li>
+<li>share code</li>
+<li>code storage into database</li>
 </ul>
 
 <blockquote>
@@ -87,6 +90,7 @@ It can be used for hosting sites like jsfiddle and codepen.You can also host it 
 <li>jQuery</li>
 <li>codemirror</li>
 <li>codeigniter</li>
+<li>together.js</li>
 </ul>
 
 <h3>
